--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,6 @@
-<div>
-    <button mat-flat-button (click)="test()">Listen for messages</button>
+<mat-card>
+  <mat-card-content>
+    <button mat-flat-button color="primary" (click)="test()">Listen for messages</button>
     <h1>Message Output: {{message}}</h1>
-</div>
+  </mat-card-content>
+</mat-card>
