--- a/src/app/statusbar/statusbar.component.scss
+++ b/src/app/statusbar/statusbar.component.scss
@@ -1,10 +1,9 @@
 .span {
-    margin: auto;
+  margin: auto;
 }
 
 .mat-toolbar {
-    height: 80px;
-    justify-content: center;
-    background-color: #475bcf;
-    border: none;
+  //height: 80px;
+  justify-content: center;
+  background-color: #475bcf;
 }
