--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,42 +6,23 @@
 <body>
   <!-- sidenav  -->
   <mat-sidenav-container autosize>
-    <mat-sidenav #sidenav mode="side" opened>
-      <div class="sidenav-header">
-        <mat-icon>3d_rotation</mat-icon>
-        <span style="margin:0;" class="mat-display-1">Prototype</span>
-      </div>
-      <mat-nav-list>
-        <h4 class="headline-title">Powered by</h4>
-        <img matListAvatar src="assets/ros_logo.png">
-        <br>
-        <section class="mat-typography">
-          <a mat-list-item [routerLink]="'dashboard'">
-            <mat-icon>dashboard</mat-icon>Dashboard
-          </a>
-          <a mat-list-item>
-            <mat-icon>cast</mat-icon>Start Scanning
-          </a>
-          <a mat-list-item (click)="toggleFileBrowser()">
-            <mat-icon>file_copy</mat-icon>
-            <span *ngIf="!browserSelected">Show Data Files</span>
-            <span *ngIf="browserSelected">Hide Data Files</span>
-          </a>
-        </section>
-      </mat-nav-list>
+
+    <!-- left sidenav  panel -->
+    <mat-sidenav #left id="left-sidenav" mode="side" position="start" opened>
+      <app-sidenav></app-sidenav>
     </mat-sidenav>
+
+    <!-- right sidenav panel -->
+    <mat-sidenav #right id="right-sidenav" mode="side" position="end" opened>
+      <app-filesystem></app-filesystem>
+    </mat-sidenav>
+    <!-- end of right side panel-->
+
     <mat-sidenav-content>
       <main>
-        <app-statusbar></app-statusbar>
-        <div class="row">
-          <div *ngIf="browserSelected" class="col-sm-6 col-md-6 col-lg-4" id="file_container">
-            <app-filesystem></app-filesystem>
-          </div>
-          <div class="col-sm-6 col-md-8 col-lg-8">
-            <router-outlet></router-outlet>
-          </div>
-        </div>
+        <router-outlet></router-outlet>
       </main>
+      <app-statusbar></app-statusbar>
     </mat-sidenav-content>
   </mat-sidenav-container>
 </body>
