--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,49 +1,16 @@
 /*Side Navigation*/
-mat-sidenav {
+#left-sidenav {
   width: 260px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100%;
-  color: white;
+  color: #fff;
   background: #3f51b5;
   text-align: center;
 }
 
-mat-sidenav .sidenav-header {
-  padding: 20px;
-  background: #475bcf;
-}
-
-mat-icon {
-  margin-right: 10px;
-}
-
-mat-sidenav mat-nav-list {
-  padding: 20px;
-  text-align: center;
-}
-
-mat-sidenav mat-nav-list a {
-  border-radius: 10px;
-  margin-bottom: 10px;
-  transition: all 0.4s;
-  background: #475bcf;
-  color: white;
-}
-
-mat-sidenav mat-nav-list a:hover {
-  background: #fff;
-  color: rgb(110, 131, 212);
+#right-sidenav {
+  width: 260px;
 }
 
 main {
   height: 100vh;
-  padding-left: 5px;
-  overflow-x: hidden;
-}
-
-img {
-  max-width: 80%;
-  padding: 20px;
+  padding: 5px;
 }
