--- a/src/app/filesystem/filesystem.component.html
+++ b/src/app/filesystem/filesystem.component.html
@@ -1,36 +1,34 @@
-<div class="row">
-  <div class="col">
-    <mat-card>
-      <mat-card-content>
-        <mat-card-title>Browse Folders</mat-card-title>
-        <mat-list>
-          <mat-list-item *ngFor="let folder of folders; let index = index" (click)="markFolder(index, folder.name)"
-            [class.active]="selectedFolderIndex === index">
-            <button mat-icon-button>
-              <mat-icon>folder</mat-icon>
-            </button>
-            <mat-divider></mat-divider>
-            <span>{{folder.name}}</span>
-          </mat-list-item>
-        </mat-list>
-      </mat-card-content>
-    </mat-card>
-  </div>
-  <div *ngIf="files.length != 0" class="col">
-    <mat-card>
-      <mat-card-content>
-        <mat-card-title>{{selectedFolderName}}</mat-card-title>
-        <mat-list>
-          <mat-list-item *ngFor="let file of files; let index = index" (click)="markFile(index)"
-            [class.active]="selectedFileIndex === index">
-            <button mat-icon-button>
-              <mat-icon>file_copy</mat-icon>
-            </button>
-            <mat-divider></mat-divider>
-            <span>{{file}}</span>
-          </mat-list-item>
-        </mat-list>
-      </mat-card-content>
-    </mat-card>
-  </div>
+<div class="sidenav-header">
+  <h2 style="margin:0;">
+    <mat-icon>file_copy</mat-icon> Browse Data
+  </h2>
 </div>
+<button mat-button *ngIf="selectedFolderName" (click)="showFolders()">
+  <mat-icon>keyboard_arrow_left</mat-icon>
+  {{selectedFolderName}}
+</button>
+<mat-nav-list *ngIf="!selectedFolderName">
+  <mat-list-item *ngFor="let folder of folders; let index = index" (click)="markFolder(index, folder.name)"
+    [class.active]="selectedFolderIndex === index">
+    <div matLine>
+      <button mat-button>
+        <mat-icon mat-list-icon>folder</mat-icon>
+        {{folder.name}}
+      </button>
+    </div>
+    <mat-divider></mat-divider>
+    <button mat-icon-button>
+      <mat-icon mat-list-icon>keyboard_arrow_right</mat-icon>
+    </button>
+  </mat-list-item>
+</mat-nav-list>
+<mat-nav-list>
+  <mat-list-item *ngFor="let file of files; let index = index" (click)="markFile(index)"
+    [class.active]="selectedFileIndex === index">
+    <button mat-icon-button>
+      <mat-icon>file_copy</mat-icon>
+    </button>
+    <mat-divider></mat-divider>
+    <span>{{file}}</span>
+  </mat-list-item>
+</mat-nav-list>
