--- a/src/app/statusbar/statusbar.component.scss
+++ b/src/app/statusbar/statusbar.component.scss
@@ -3,7 +3,8 @@
 }
 
 .mat-toolbar {
-  //height: 80px;
+  height: 10%;
   justify-content: center;
-  background-color: #475bcf;
+  position: absolute;
+  bottom: 0;
 }
