--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
-<div class="row">
-  <div class=" col-lg-4">
+<!--<div class="row">-->
+  <!--<div class="col-lg-4">
     <mat-card>
       <mat-card-content>
         <button mat-flat-button color="primary">
@@ -13,5 +13,9 @@
         </mat-list>
       </mat-card-content>
     </mat-card>
-  </div>
-</div>
+  </div>-->
+ <!-- <div class="col-lg-8">
+    <button (click)="createCanvas()">Create Canvas</button>
+    <div class="map"></div>
+  </div>-->
+<!--</div>-->
