--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -32,9 +32,14 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-lg-12">
+  <div class="col-lg-12 justify-content-center text-center">
     <div class="alert alert-danger text-center">
-      <mat-icon>error</mat-icon> Please connect to RosBrdge
+      <div class="image_wrapper">
+        <img src="assets/error.png" alt="error">
+      </div>
+      <button mat-button>
+        <mat-icon>error</mat-icon><strong> Please connect to RosBrdge</strong>
+      </button>
     </div>
   </div>
 </div>
