add setting to configure rosbridge connection

--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -13,6 +13,9 @@
       <a mat-list-item>
         <mat-icon>settings_overscan</mat-icon>Calibrate Position
       </a>
+      <a mat-list-item (click)="configureRosBridge()">
+        <mat-icon>settings</mat-icon>Configure Rosbridge
+      </a>
     </section>
   </mat-nav-list>
   <section class="img-container">
