--- a/src/app/dialogs/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/dialogs/confirm-dialog/confirm-dialog.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>
-    <mat-icon>message</mat-icon>
-    Message Recieved
+    <mat-icon>{{data.icon}}</mat-icon>
+    {{data.title}}
 </h1>
 
 <div mat-dialog-content>
