--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -31,7 +31,7 @@
     </mat-card>
   </div>
 </div>
-<div class="row">
+<div class="row" *ngIf="!__BridgeService.isConnected">
   <div class="col-lg-12 justify-content-center text-center">
     <div class="alert alert-danger text-center">
       <div class="image_wrapper">
