--- a/src/app/statusbar/statusbar.component.html
+++ b/src/app/statusbar/statusbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="secondary">
+<mat-toolbar>
   <mat-toolbar-row>
     <button mat-icon-button mat-raised-button color="primary" (click)="toggleLSideNav()">
       <mat-icon>arrow_back</mat-icon>
