--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,71 +1,65 @@
-<div *ngIf="__BridgeService.isConnected" class="row">
-  <div class="col-lg-12">
-    <!-- toolbar displays dashboard options-->
-    <mat-toolbar id="options-bar">
-      <span>
-        <button mat-flat-button (click)="startListening()" *ngIf="!listeningForMessages">
-          <mat-icon>sync_alt</mat-icon>
-          Listen for messages
-        </button>
-        <button mat-flat-button (click)="stopListening()" *ngIf="listeningForMessages">
-          <mat-icon>sync_alt</mat-icon>
-          Stop Listening
-        </button>
-      </span>
-      <span class="spacer"></span>
-      <span *ngIf="listeningForMessages">
-        <button mat-icon-button matTooltip="Display Options" [matMenuTriggerFor]="menu" #menuTrigger="matMenuTrigger"
-          (click)="menuTrigger.openMenu()">
-          <mat-icon>menu</mat-icon>
-        </button>
-        <mat-menu #menu="matMenu" [overlapTrigger]="false">
-          <span (mouseleave)="menuTrigger.closeMenu()">
-            <button mat-icon-button matTooltip="Toggle Images" (click)="isImageDisplayed = !isImageDisplayed">
-              <mat-icon>collections</mat-icon>
-            </button>
-            <button mat-icon-button matTooltip="Toggle 3D Canvas" (click)="isCanvasDisplayed = !isCanvasDisplayed">
-              <mat-icon>3d_rotation</mat-icon>
-            </button>
-          </span>
-        </mat-menu>
-      </span>
-    </mat-toolbar>
-    <!-- toolbar with coordinates and sequence number-->
-    <mat-toolbar id="coordinates-bar" color="primary" *ngIf="listeningForMessages">
-      <span class="spacer"><strong>Seq: </strong>
-        <p *ngIf="frame">{{frame.seq}}</p>
-      </span>
-      <span class="spacer"><strong>posX: </strong>
-        <p *ngIf="frame">{{frame.posX}}</p>
-      </span>
-      <span class="spacer"><strong>posY: </strong>
-        <p *ngIf="frame">{{frame.posY}}</p>
-      </span>
-      <span><strong>posZ: </strong>
-        <p *ngIf="frame">{{frame.posZ}}</p>
-      </span>
-    </mat-toolbar>
-    <!-- card that displays either the canvas or images-->
-    <mat-card>
-      <mat-card-content>
-        <div *ngIf="isImageDisplayed && frame" class="image_wrapper">
-          <img src="data:image/png;base64, {{frame.image}}" alt="frame image">
-        </div>
-        <div *ngIf="isCanvasDisplayed" id="map"></div>
-      </mat-card-content>
-    </mat-card>
+<div *ngIf="__BridgeService.isConnected" class="row no-gutters">
+  <!-- toolbar displays dashboard options-->
+  <mat-toolbar id="options-bar">
+    <span>
+      <button mat-flat-button (click)="startListening()" *ngIf="!listeningForMessages">
+        <mat-icon>sync_alt</mat-icon>
+        Listen for messages
+      </button>
+      <button mat-flat-button (click)="stopListening()" *ngIf="listeningForMessages">
+        <mat-icon>sync_alt</mat-icon>
+        Stop Listening
+      </button>
+    </span>
+    <span class="spacer"></span>
+    <span *ngIf="listeningForMessages">
+      <button mat-icon-button matTooltip="Display Options" [matMenuTriggerFor]="menu" #menuTrigger="matMenuTrigger"
+        (click)="menuTrigger.openMenu()">
+        <mat-icon>menu</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu" [overlapTrigger]="false">
+        <span (mouseleave)="menuTrigger.closeMenu()">
+          <button mat-button matTooltip="Toggle Images" (click)="toggleImages()">
+            <mat-icon>collections</mat-icon>
+            Toggle Images
+          </button>
+          <mat-divider></mat-divider>
+          <button mat-button matTooltip="Toggle 3D Canvas" (click)="toggleCanvas()">
+            <mat-icon>3d_rotation</mat-icon>
+            Toggle Canvas
+          </button>
+        </span>
+      </mat-menu>
+    </span>
+  </mat-toolbar>
+  <!-- toolbar with coordinates and sequence number-->
+  <mat-toolbar id="coordinates-bar" color="primary" *ngIf="listeningForMessages">
+    <span class="spacer"><strong>Seq: </strong>
+      <p *ngIf="frame">{{frame.seq}}</p>
+    </span>
+    <span class="spacer"><strong>posX: </strong>
+      <p *ngIf="frame">{{frame.posX}}</p>
+    </span>
+    <span class="spacer"><strong>posY: </strong>
+      <p *ngIf="frame">{{frame.posY}}</p>
+    </span>
+    <span><strong>posZ: </strong>
+      <p *ngIf="frame">{{frame.posZ}}</p>
+    </span>
+  </mat-toolbar>
+  <!-- card that displays either the canvas or images-->
+  <div *ngIf="isImageDisplayed && frame" class="image_wrapper">
+    <img src="data:image/png;base64, {{frame.image}}" alt="frame image">
   </div>
+  <div [hidden]="!isCanvasDisplayed" id="canvas" #map (window:resize)="onResize($event)"></div>
 </div>
 <!-- seperate row that displays an alert message that rosbridge is not connected-->
-<div class="row" *ngIf="!__BridgeService.isConnected">
-  <div class="col-lg-12 justify-content-center text-center">
-    <div class="alert alert-danger text-center">
-      <div class="image_wrapper">
-        <img src="assets/error.png" alt="error">
-      </div>
-      <button mat-button>
-        <mat-icon>error</mat-icon><strong> Please connect to RosBrdge</strong>
-      </button>
-    </div>
+<div class="container-fluid" *ngIf="!__BridgeService.isConnected">
+  <div class="image_wrapper">
+    <img src="assets/error.png" alt="error">
+    <br>
+    <button mat-button>
+      <mat-icon>error</mat-icon><strong> Please connect to RosBrdge</strong>
+    </button>
   </div>
 </div>
