ensure to unsubscribe from images

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -48,7 +48,7 @@
     </span>
   </mat-toolbar>
   <!-- card that displays either the canvas or images-->
-  <div *ngIf="isImageDisplayed && frame" class="image_wrapper">
+  <div *ngIf="isImageDisplayed && image" class="image_wrapper">
     <img *ngIf="image.format == 'png'" src="data:image/png;base64, {{image.data}}" alt="frame image">
     <img *ngIf="image.format == 'jpeg'" src="data:image/jpeg;base64, {{image.data}}" alt="frame image">
   </div>
