Updating Mobile Styling

--- a/src/mobile/mobile.css
+++ b/src/mobile/mobile.css
@@ -36,6 +36,10 @@ span{
 canvas{
      display: block;
 }
+/* Canvas Container */
+.canvas-container{
+     height: 80vh;
+}
 /* IPhone Size  */
 @media screen and (min-width: 0px) and (max-width: 600px){
      /* Wrapping  */
@@ -81,3 +85,80 @@ canvas{
 	     padding: 0px;
      }	
 }
+/* Container Fluid */
+.container-fluid{
+     background-color: rgb(241, 173, 173);
+}
+/* Image Wrapper */
+.image-wrapper{
+     height: 80vh;
+     text-align: center;
+}
+/* Image Container */
+.img-container{
+     position: absolute;
+     bottom: 0;
+}
+/* Image Container Wrapper*/
+.img-container-wrapper{
+     max-width: 70%;
+     padding: 20px;
+     padding-top: 0;
+}
+/* Space */
+.spacer{
+     flex: 1 1 auto;
+}
+/* Coordinates Bar */
+.coordinates-bar{
+     height: 5%;
+      font-size: 1vw;
+}
+/* Side Nav Header */
+.sidenav-header{
+     padding: 20px;
+     background: #475bcf;
+     text-align: center;
+     color: #ffffff;
+}
+/* Mat Tool Bar */
+.mat-toolbar{
+     height: 10%;
+     justify-content: center;
+     position: absolute;
+     bottom: 0;
+}
+/* Mat Icon */
+.mat-icon {
+     margin-right: 10px;
+}
+/* Mat Nav List */
+.mat-nav-list {
+     padding: 20px;
+     text-align: center;
+}
+/* Mat nav List */
+.mat-nav-list{
+     border-radius: 10px;
+     margin-bottom: 10px;
+     transition: all 0.4s;
+     background: #475bcf;
+     color: white;
+}
+/* Mat Nav List */
+.mat-nav-list:hover{
+     background: #fff;
+     color: rgb(110, 131, 212);
+}
+/* Mat List Item */
+.mat-list-item{
+     background-color: #3f51b5;
+     color: #fff;
+}
+/* Mat List Item Hover */
+.mat-list-item:hover{
+     background: white;
+     color: #475bcf;
+}
+
+
