enusre scanning is active before displaying frames

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="isConnected" class="row no-gutters">
+<div *ngIf="isConnected && isScanning" class="row no-gutters">
   <!-- toolbar displays dashboard options-->
   <mat-toolbar id="options-bar">
     <span>
@@ -48,18 +48,35 @@
     </span>
   </mat-toolbar>
   <!-- card that displays either the canvas or images-->
-  <div [hidden]="!isImageDisplayed" class="image_wrapper">
+  <div [hidden]="!isImageDisplayed" class="camera_wrapper">
     <img src="{{imageUrl}}" width="{{dashboardWidth}}" height="{{dashboardHeight}}" alt="frame image">
   </div>
   <div #canvas [hidden]="!isCanvasDisplayed" id="canvas" (window:resize)="onResize($event)"></div>
 </div>
-<!-- seperate row that displays an alert message that rosbridge is not connected-->
-<div class="container-fluid" *ngIf="!isConnected">
-  <div class="image_wrapper">
-    <img src="assets/error.png" alt="error">
-    <br>
-    <button mat-button>
-      <mat-icon>error</mat-icon><strong> Please connect to RosBrdge</strong>
-    </button>
+<!-- seperate container for error messages-->
+<div class="container-fluid" *ngIf="!isConnected || !isScanning">
+  <!-- warning template for rosbridge connection-->
+  <div class="warning_template" *ngIf="!isConnected">
+    <div class="wrapper">
+      <img src="assets/error_bridge.png" alt="error" id="error_bridge">
+    </div>
+    <div class="warning_message">
+      <button mat-button>
+        <mat-icon>warning</mat-icon>
+        <strong> Please connect to Rosbridge</strong>
+      </button>
+    </div>
+  </div>
+  <!-- warning template for scanner status-->
+  <div class="warning_template" *ngIf="isConnected && !isScanning">
+    <div class="wrapper">
+      <img src="assets/error_scan.png" alt="error" id="error_scan">
+    </div>
+    <div class="warning_message">
+      <button mat-button>
+        <mat-icon>warning</mat-icon>
+        <strong> The scanner is disabled</strong>
+      </button>
+    </div>
   </div>
 </div>
