--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,10 +1,48 @@
 .container-fluid {
-  background-color: rgb(241, 173, 173);
+  background-color: rgb(231, 226, 226);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 90vh;
 }
 
-.image_wrapper {
-  height: 80vh;
+.warning_template {
   text-align: center;
+  width: 30%;
+  background-color: rgb(245, 129, 129);
+}
+
+.wrapper {
+  display: flex;
+  height: 30vh;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 30vh;
+}
+
+#error_bridge {
+  width: 40%;
+}
+
+#error_scan {
+  width: 40%;
+}
+
+.warning_message {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #fff;
+  width: 100%;
+  height: 30vh;
+}
+
+.warning_message button {
+  background-color: rgb(233, 125, 125);
+  color: #fff;
 }
 
 .spacer {
@@ -18,4 +56,9 @@
 #coordinates-bar {
   height: 5%;
   font-size: 1vw;
+}
+
+.camera_wrapper {
+  height: 80vh;
+  text-align: center;
 }
