--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -12,6 +12,15 @@
       </button>
     </span>
     <span class="spacer"></span>
+    <button mat-flat-button (click)="enableFullScreenMode()" *ngIf="listeningForMessages && !isFullScreen">
+      <mat-icon>fullscreen</mat-icon>
+      Enable Full Screen
+    </button>
+    <button mat-flat-button (click)="disableFullScreenMode()" *ngIf="listeningForMessages && isFullScreen">
+      <mat-icon>fullscreen</mat-icon>
+      Disable Full Screen
+    </button>
+    <span class="spacer"></span>
     <span *ngIf="listeningForMessages">
       <button mat-icon-button matTooltip="Display Options" [matMenuTriggerFor]="menu" #menuTrigger="matMenuTrigger"
         (click)="menuTrigger.openMenu()">
