--- a/src/app/filesystem/filesystem.component.html
+++ b/src/app/filesystem/filesystem.component.html
@@ -12,17 +12,19 @@
   Refresh
 </button>
 <mat-nav-list>
-  <mat-list-item *ngFor="let item of directoryList; let index = index" (click)="navigateFileSystem(index, item)"
-    [class.active]="selectedItemIndex === index">
+  <mat-list-item *ngFor="let item of directoryList; let index = index" [class.active]="selectedItemIndex === index">
     <div matLine>
-      <button mat-button>
+      <button mat-button matTooltip="Open {{item.name}}" (click)="navigateFileSystem(index, item)">
         <mat-icon *ngIf="item.isDir" mat-list-icon>folder</mat-icon>
         <mat-icon *ngIf="!item.isDir" mat-list-icon>file_copy</mat-icon>
         {{item.name}}
       </button>
     </div>
+    <button mat-icon-button matTooltip="Remove" (click)="removeItem(index, item)">
+      <mat-icon mat-list-icon>delete</mat-icon>
+    </button>
     <mat-divider></mat-divider>
-    <button mat-icon-button>
+    <button mat-icon-button (click)="navigateFileSystem(index, item)">
       <mat-icon mat-list-icon>keyboard_arrow_right</mat-icon>
     </button>
   </mat-list-item>
