Align mat-icon without using mat-button
Known issue here: https://stackoverflow.com/questions/49657545/mat-icon-does-not-center-in-its-div/49658015

--- a/web/-RealityVirtualVirturalizer-Interface/src/app/dialogs/rosconfig-dialog/rosconfig-dialog.component.html
+++ b/web/-RealityVirtualVirturalizer-Interface/src/app/dialogs/rosconfig-dialog/rosconfig-dialog.component.html
@@ -1,7 +1,7 @@
-<button mat-button mat-dialog-title>
+<span mat-button mat-dialog-title>
   <mat-icon>settings</mat-icon>
   Rosbridge Configuration
-</button>
+</span>
 <div mat-dialog-content>
   <p>Set a custom host and port for rosbridge websocket connection</p>
 </div>
