--- a/web/-RealityVirtualVirturalizer-Interface/src/app/dialogs/rosconfig-dialog/rosconfig-dialog.component.scss
+++ b/web/-RealityVirtualVirturalizer-Interface/src/app/dialogs/rosconfig-dialog/rosconfig-dialog.component.scss
@@ -1,4 +1,8 @@
 td {
-    padding-left: 10px;
-    padding-right: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.mat-icon {
+  vertical-align: middle;
 }
